[gd_scene load_steps=13 format=3 uid="uid://chp56y0i0a2wj"]

[ext_resource type="Script" uid="uid://brkc2sj2wtsb6" path="res://scripts/main_menu.gd" id="1_7b55j"]
[ext_resource type="Texture2D" uid="uid://rqpn6fpmw8l4" path="res://assets/background.png" id="2_5dd4i"]
[ext_resource type="Texture2D" uid="uid://bfe6na04j4vn" path="res://assets/buttons/play_blue_pressed.png" id="5_5pajh"]
[ext_resource type="Texture2D" uid="uid://nmkqe0m3sw0f" path="res://assets/buttons/continue_blue.png" id="6_lgwnu"]
[ext_resource type="Texture2D" uid="uid://chk5tea4ci6ym" path="res://assets/buttons/continue_blue_pressed.png" id="7_flqon"]
[ext_resource type="Texture2D" uid="uid://b4lf2hynapysv" path="res://assets/buttons/exit_blue.png" id="8_rcqid"]
[ext_resource type="Texture2D" uid="uid://c8kyobs4b4m5r" path="res://assets/buttons/exit_blue_pressed.png" id="9_1ajci"]
[ext_resource type="Texture2D" uid="uid://cec771ay2a4gu" path="res://assets/buttons/settings_blue.png" id="10_7b55j"]
[ext_resource type="Texture2D" uid="uid://bd66ycspy0wha" path="res://assets/buttons/settings_blue_pressed.png" id="11_5pajh"]
[ext_resource type="FontFile" uid="uid://bql8obr3wlyca" path="res://assets/fonts/GrapeSoda.ttf" id="14_7b55j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5pajh"]
texture = ExtResource("2_5dd4i")
modulate_color = Color(0.5409902, 0.5409906, 0.5409904, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5dd4i"]
load_path = "res://.godot/imported/play_blue.png-24ff7cb57c9d5188674f0aa65f045334.ctex"

[node name="main_menu" type="Node2D"]
position = Vector2(328, 451)
script = ExtResource("1_7b55j")

[node name="background" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -455.0
offset_right = 831.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5pajh")

[node name="title" type="Label" parent="."]
offset_left = 15.0
offset_top = -430.0
offset_right = 514.0
offset_bottom = -259.0
theme_override_colors/font_color = Color(0.003921569, 0.105882354, 0.2627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0.2954394, 0.5307722, 0.922019, 1)
theme_override_constants/line_spacing = 9
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("14_7b55j")
theme_override_font_sizes/font_size = 170
text = "SINNER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 109.0
offset_top = -251.0
offset_right = 386.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="start_game" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("CompressedTexture2D_5dd4i")
texture_pressed = ExtResource("5_5pajh")
texture_hover = ExtResource("5_5pajh")
ignore_texture_size = true
stretch_mode = 5

[node name="continue" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("6_lgwnu")
texture_pressed = ExtResource("7_flqon")
texture_hover = ExtResource("7_flqon")
ignore_texture_size = true
stretch_mode = 5

[node name="exit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("8_rcqid")
texture_pressed = ExtResource("9_1ajci")
texture_hover = ExtResource("9_1ajci")
ignore_texture_size = true
stretch_mode = 5

[node name="settings" type="TextureButton" parent="."]
offset_left = 205.0
offset_top = 44.0
offset_right = 292.0
offset_bottom = 136.0
size_flags_vertical = 3
texture_normal = ExtResource("10_7b55j")
texture_pressed = ExtResource("11_5pajh")
texture_hover = ExtResource("11_5pajh")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_options_pressed"]
